fix: displaying stars correctly and headerLevel in Collapse

--- a/src/styles/pages/house.scss
+++ b/src/styles/pages/house.scss
@@ -41,6 +41,7 @@ h2 {
     position: absolute;
     bottom: 5px;
     right: 0;
+    min-width: 175px;
     img {
       margin-left: 5px;
     }
